raspberry/services/gotosocial/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotosocial-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: gotosocial
